org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/failing/MemberNameTests_MultipleInheritance_nestedScopeLinkingTest.alf.xt
/* 
XPECT_SETUP org.omg.sysml.xpect.tests.testsuite.SysMLXtextTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
			}
		}
	}
END_SETUP 
*/
//The linking/scoping tests for "b" pass but not "a"
//"a" causes Rnti

//XPECT noErrors ---> ""
package test{
	class A{
		class a {}
		class AA {}
		class xx {}
	}
	class B specializes A {
//pass
		//XPECT linkedName at A::a --> test.A.a
		class b specializes A::a {}
//fail  java.lang.RuntimeException: Error creating value for argument org.eclipse.xpect.xtext.lib.tests.LinkingTest.linkedName(..., ICrossEReferenceAndEObject arg1)
//Caused by: java.lang.RuntimeException: no EStructuralFeature found at '...\n	--- */\n		cl|ass b1 specia...'
		//XPECT linkedName at a --> test.A.a
		class b1 specializes a{}
//pass
		//XPECT linkedName at A::AA --> test.A.AA
//pass
		class b2 specializes A::AA{}
		//XPECT linkedName at AA --> test.A.AA
		class b3 specializes AA{}
	}
	class C specializes B{
//fail
		//XPECT linkedName at a --> test.A.a
		class c0 specializes a {}
//pass
		//XPECT linkedName at b --> test.B.b
		class c1 specializes b {}
//pass
		//XPECT linkedName at b1 --> test.B.b1
		class c2 specializes b1{}
//pass		
		//XPECT linkedName at AA --> test.A.AA
		class c3 specializes AA{}
	}
	class D specializes A::xx{} 
}
